--- a/web-server/public/style.css
+++ b/web-server/public/style.css
@@ -71,6 +71,14 @@ button{
     font-family: Bradley Hand ITC;
     font-weight:700;
 }
+.locationOn{
+    font-size: 2rem;
+    color: rgb(44, 60, 181);
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+    font-family: Bradley Hand ITC;
+    font-weight:700;
+}
 .time_date span{
     font-size: 1.5rem;
     color: rgb(28, 38, 114);
